project xgb and random forest

--- a/Project/project_xgb.ipynb
+++ b/Project/project_xgb.ipynb
@@ -19,10 +19,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 392
         },
         "id": "9wRs8B7A1gvQ",
-        "outputId": "3e36be16-ae4c-4d61-848c-42ae2404cdc1"
+        "outputId": "78b901ba-40db-4e85-cbc7-b24b707b801d"
       },
       "outputs": [
         {
@@ -203,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MXn82aPS10U-",
-        "outputId": "83d5d35f-3f1d-40c8-b701-ef8c98e1ae31"
+        "outputId": "713bcac2-b67a-4e0a-85bc-6f59e13f8141"
       },
       "outputs": [
         {
@@ -244,7 +244,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8cN5F-it15VZ",
-        "outputId": "deabfb3b-ec31-461b-aed4-583799e4957b"
+        "outputId": "5dd74b28-2df9-44ec-dc39-08b2188719bb"
       },
       "outputs": [
         {
@@ -285,7 +285,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HhL5dOj02pbd",
-        "outputId": "f5816f3e-9410-46d4-89be-3497fc97ef6e"
+        "outputId": "4e95ac51-62f8-4ed8-ade3-22d356017003"
       },
       "outputs": [
         {
@@ -334,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iv9PL5R93aKB",
-        "outputId": "3e002364-aba8-435a-a965-8426fd665aef"
+        "outputId": "a7b8bdc6-1afd-41ba-b3e7-e4e74ed9bfab"
       },
       "outputs": [
         {
@@ -389,7 +389,7 @@
           "height": 291
         },
         "id": "y6yx4hBQ3fW-",
-        "outputId": "ff5280e6-6a56-4916-ac51-69ba523938ae"
+        "outputId": "6c22c2ec-882e-4493-e594-610445b7394c"
       },
       "outputs": [
         {
@@ -544,7 +544,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lgSh-K6E3nvf",
-        "outputId": "b80e0cc4-0ec5-4a37-bd84-d0731a4197a8"
+        "outputId": "51b1f474-d59f-4567-fe98-541c82bd5f4d"
       },
       "outputs": [
         {
@@ -588,7 +588,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yebf5QZt3o4S",
-        "outputId": "85c2f117-7dd1-460f-b63a-d59185ec7919"
+        "outputId": "8bb231e9-3eaf-4dde-c63d-0fea99985d93"
       },
       "outputs": [
         {
@@ -614,7 +614,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ZGv4g6R4GZd",
-        "outputId": "c77ab417-2d72-4935-93a1-be5eb24a92ee"
+        "outputId": "f5eaf51b-678a-4487-a9db-5ddb795425b6"
       },
       "outputs": [
         {
@@ -639,10 +639,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 713
+          "height": 714
         },
         "id": "XHEMbatQ5iXG",
-        "outputId": "47d2e187-f4c9-403d-a462-c114b3bf62f3"
+        "outputId": "c46f86ce-0bee-45cd-cba3-30f808d1957a"
       },
       "outputs": [
         {
@@ -967,10 +967,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 502
+          "height": 522
         },
         "id": "FvLrOyD75_I9",
-        "outputId": "81b29e41-0208-45fa-b073-ab1193de77b2"
+        "outputId": "2a94aa4d-5748-42ee-92e9-d4b9dad2c1d7"
       },
       "outputs": [
         {
@@ -1287,12 +1287,36 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "rvlatWRN4H3I"
+        "id": "vqe9vrNcdUFd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/stow/python/amd64_linux26/python-3.9/lib/python3.9/site-packages/xgboost/sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+            "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[17:49:19] WARNING: ../src/learner.cc:573: \n",
+            "Parameters: { \"n_estimator\" } might not be used.\n",
+            "\n",
+            "  This may not be accurate due to some parameters are only used in language bindings but\n",
+            "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+            "  verification. Please open an issue if you find above cases.\n",
+            "\n",
+            "\n",
+            "[17:49:19] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+          ]
+        }
+      ],
       "source": [
-        "from sklearn.ensemble import AdaBoostClassifier\n",
-        "classifier = AdaBoostClassifier(n_estimators = 300, learning_rate=1)\n",
+        "from xgboost import XGBClassifier\n",
+        "classifier = XGBClassifier(learning_rate = 0.5, n_estimator = 500)\n",
         "model = classifier.fit(X, y)"
       ]
     },
@@ -1302,10 +1326,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 392
         },
         "id": "rIFY6p1v6rSL",
-        "outputId": "2912e9d2-e111-4132-be4d-7e559fb23fe8"
+        "outputId": "d6fed5b3-240d-435a-c724-10752117bc23"
       },
       "outputs": [
         {
@@ -1478,10 +1502,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 713
+          "height": 714
         },
         "id": "AcZFLvcc7c98",
-        "outputId": "cbf6e005-44f8-4ece-89ce-e0047a8d4cf8"
+        "outputId": "ffcca42d-519e-4be2-826c-716647f093a6"
       },
       "outputs": [
         {
@@ -1781,10 +1805,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 522
         },
         "id": "ajRo76GU7kad",
-        "outputId": "5d24802e-5e1b-4662-8a6f-6fd6dbf34c49"
+        "outputId": "b5f54245-cb80-4b39-ee66-edc27861dd03"
       },
       "outputs": [
         {
@@ -2093,7 +2117,7 @@
           "height": 424
         },
         "id": "AUoTJoMWBikM",
-        "outputId": "7831493e-f5cf-4286-885e-08581e3d44e6"
+        "outputId": "08a7af58-2f41-4f9b-bbac-f9d8e3d17c87"
       },
       "outputs": [
         {
@@ -2220,7 +2244,7 @@
           "height": 424
         },
         "id": "jKTkty36Ce4X",
-        "outputId": "d9b4ec14-0c6f-4b9b-db02-d0308d1d37cf"
+        "outputId": "4cfb9e2b-a29b-4f86-dbdf-b8e8ea258a04"
       },
       "outputs": [
         {
@@ -2282,7 +2306,7 @@
               "    <tr>\n",
               "      <th>23837</th>\n",
               "      <td>23838</td>\n",
-              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>23838</th>\n",
@@ -2317,7 +2341,7 @@
               "3          4           0\n",
               "4          5           0\n",
               "...      ...         ...\n",
-              "23837  23838           0\n",
+              "23837  23838           1\n",
               "23838  23839           0\n",
               "23839  23840           0\n",
               "23840  23841           0\n",
@@ -2343,7 +2367,7 @@
       },
       "outputs": [],
       "source": [
-        "prediction.to_csv('./adaprediction.csv',index= False)"
+        "prediction.to_csv('./XGBprediction.csv',index= False)"
       ]
     }
   ],
