--- a/Project/project_xgb.ipynb
+++ b/Project/project_xgb.ipynb
@@ -1285,24 +1285,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 27,
       "metadata": {
         "id": "vqe9vrNcdUFd"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/stow/python/amd64_linux26/python-3.9/lib/python3.9/site-packages/xgboost/sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-            "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[17:49:19] WARNING: ../src/learner.cc:573: \n",
+            "[18:00:07] WARNING: ../src/learner.cc:573: \n",
             "Parameters: { \"n_estimator\" } might not be used.\n",
             "\n",
             "  This may not be accurate due to some parameters are only used in language bindings but\n",
@@ -1310,19 +1302,19 @@
             "  verification. Please open an issue if you find above cases.\n",
             "\n",
             "\n",
-            "[17:49:19] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+            "[18:00:07] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
           ]
         }
       ],
       "source": [
         "from xgboost import XGBClassifier\n",
-        "classifier = XGBClassifier(learning_rate = 0.5, n_estimator = 500)\n",
+        "classifier = XGBClassifier(learning_rate = 0.5, n_estimator = 500,use_label_encoder =False)\n",
         "model = classifier.fit(X, y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1482,7 +1474,7 @@
               "5            0            0             40  United-States  "
             ]
           },
-          "execution_count": 17,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1498,7 +1490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1788,7 +1780,7 @@
               "[23842 rows x 14 columns]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1801,7 +1793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2084,7 +2076,7 @@
               "[23842 rows x 14 columns]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2099,7 +2091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 31,
       "metadata": {
         "id": "vXsyImpv7DlP"
       },
@@ -2110,7 +2102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2211,7 +2203,7 @@
               "[23842 rows x 1 columns]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2226,7 +2218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 33,
       "metadata": {
         "id": "xHuaOdp07vnz"
       },
@@ -2237,7 +2229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2350,7 +2342,7 @@
               "[23842 rows x 2 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2361,7 +2353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 35,
       "metadata": {
         "id": "WksKtG23AzMs"
       },
