--- a/Project/project_xgb.ipynb
+++ b/Project/project_xgb.ipynb
@@ -311,19 +311,8 @@
       },
       "outputs": [],
       "source": [
-        "train['native-country'] = train['native-country'].replace(' ?' , np.nan )\n",
-        "train['Age'] = train['Age'].replace(' ?' , np.nan )\n",
-        "train['Workclass'] = train['Workclass'].replace(' ?' , np.nan )\n",
-        "train['fnlgt'] = train['fnlgt'].replace(' ?' , np.nan )\n",
-        "train['education-num'] = train['education-num'].replace(' ?' , np.nan )\n",
-        "train['marital-status'] = train['marital-status'].replace(' ?' , np.nan )\n",
-        "train['occupation'] = train['occupation'].replace(' ?' , np.nan )\n",
-        "train['relationship'] = train['relationship'].replace(' ?' , np.nan )\n",
-        "train['race'] = train['race'].replace(' ?' , np.nan )\n",
-        "train['sex'] = train['sex'].replace(' ?' , np.nan )\n",
-        "train['capital-gain'] = train['capital-gain'].replace(' ?' , np.nan )\n",
-        "train['capital-loss'] = train['capital-loss'].replace(' ?' , np.nan )\n",
-        "train['hours-per-week'] = train['hours-per-week'].replace(' ?' , np.nan )"
+        "train[train == '?'] = np.nan\n",
+        "train.info()"
       ]
     },
     {
