--- a/Project/finalsub.ipynb
+++ b/Project/finalsub.ipynb
@@ -25,7 +25,7 @@
       "cell_type": "code",
       "execution_count": 13,
       "source": [
-        "sub = Path('/content/kaggle_submissions')\n",
+        "sub = Path('/content/submissions')\n",
         "m_path = Path('/content/models')"
       ],
       "outputs": [],
